# rust_sorts

./: .gitignore  Cargo.toml  readme.md  sorts
data/: heap_avg_2022-05-26+02:00_15:37:07.995531.csv  heap_avg_2022-05-26+02:00_22:32:43.776499116.csv  heap_avg_2022-05-26+02:00_22:33:12.814005729.csv  insert_avg_2022-05-26+02:00_22:33:12.814005729.csv  merge_avg_2022-05-26+02:00_15:37:07.995531.csv  merge_avg_2022-05-26+02:00_22:32:43.776499116.csv  merge_avg_2022-05-26+02:00_22:33:12.814005729.csv  quick_avg_2022-05-26+02:00_15:37:07.995531.csv  quick_avg_2022-05-26+02:00_22:33:12.814005729.csv
src/: bubble_sort.rs  heap_sort.rs  insertion_sort.rs  lib.rs  main.rs  merge_sort.rs  quick_sort.rs
src/benchmark/: benchmark_runner.rs  dataset_gen.rs  mod.rs
