[package]
name = "sorts"
license = "MIT"
description = "A simple (and probably bad) merge sort implementation, written for chapter 14.2 of the rust book."
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
